# product-service

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml
docs/: branch-protection.md  decisions.md  git-flow-lifecycle.md  git-flow-screenshots.md  git-flow.md
src/: database.py  main.py  models.py
tests/: test_health.py
