[project]
name = "product-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.48",
  "asyncpg>=0.31.0",
  "pip>=26.0.1",
]

[tool.uv]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
